# llm-forecasting

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
embeddings/markets/: embeddings.npy  index.json  markets.json
experiments/: README.md
experiments/calibration-transfer/: FINDINGS.md  calibration_experiment.py  calibration_v2_curated.py  calibration_v3_precutoff.py  calibration_v4_nonsceptical.py  experiment_log.txt  v3_log.txt  v4_log.txt
experiments/conditional-forecasting/: README.md  config.py
experiments/dml-clustering/: cluster_markets.py  temporal_stability.py  text_clustering.py  visualize_clusters.py
experiments/fb-conditional/: FINDINGS.md  README.md  generate_pairs.py  pairs.json  pairs_data_sources.json  pairs_filtered.json  pending_pairs_2026-01-14.json  pending_questions_2026-01-14.json  resolve_and_run.py  results.json  run_experiment.py  sensitivity_analysis.py  test_prompts.py
experiments/market-comovement/: README.md  compute_correlations.py  evaluate.py  evaluate_v2.py  fetch_history.py  fetch_markets.py  generate_examples.py
experiments/russell-2000/: compute_voi.py  fetch_fed_data.py  fetch_stock_returns.py  investigate_confound.py  (+1 more)
experiments/russell-2000-crux/: compare_diversity.py  compute_voi.py  config.py  fetch_earnings_calendar.py  fetch_stock_data.py  generate_cruxes.py  opus_conditional_forecast.py  run_phase1.py  validate_mmr_selection.py  validate_pilot.py  validate_within_earnings.py
experiments/russell-2000-rubric/: apply_timeliness.py  run_v4.py  timeliness.py  validate_filtered.py
scripts/: update_market_probs.py
(+360 files in other folders)
